--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/Phenix470/nekopack",
+  "repository": "https://github.com/Phenix470/catuserbot",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
